--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -1,14 +1,16 @@
-<%= form_with model: friend do |form| %>
-<script>
-    console.log("friend[birthday]");
-</script>
+<%= form_with model: @friends do |form| %>
   <div>
     <%= form.label :name %>
     <%= form.text_field :name %>
     <br/>
     <label for="friend_birthday">Date of Birth</label>
-    <input type="date" name="friend[birthday]" id="friend_birthday" value="friend[birthday]">
+    <%= form.date_field :birthday %>
   </div>
+  <div>
+    <%= form.label :description, style: "display: block" %>
+    <%= form.rich_text_area :description %>
+  </div>
+
     <br>
   <div>
     <%= form.submit %>
