--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,5 +1,14 @@
+<%# 
+Author: Ruzan Sasuri 
+Description: UI to show name, a description and the date of birth of friends.  
+%>
+
+<% cache @friends do %>
 <h1><%= @friends.name %></h1>
+<%= @friends.description %>
 <div><%= @friends.birthday %></div>
+<% end %>
 
 <%= link_to "Back", friends_path %>
 <%= link_to "Edit", edit_friend_path(@friends) %>
+<%= button_to "Delete", @friends, method: :delete, data: { turbo_confirm: "Are you sure?" } %>
